[project]
name = "fluxlayerdiffuse"
description = "ComfyUI nodes to use [a/Flux-version-LayerDiffuse](https://github.com/RedAIGC/Flux-version-LayerDiffuse)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/leeguandong/ComfyUI_FluxLayerDiffuse"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FluxLayerDiffuse"
Icon = ""
